@@ -179,7 +179,7 @@ odbcinst -i -s -f template_file
 The individual entries of course may vary.
 
 <p>The Driver line is used to match the [section] entry in the odbcinst.ini
-file and the the Driver line in the odbcinst file is used to fine the
+file and the Driver line in the odbcinst file is used to find the
 path for the driver library, and this loaded and the connection is then
 established. It's possible to replace the driver entry with a path to
 the driver itself. This can be used, for example if the user can't get
