@@ -32,9 +32,9 @@ int _SQLGetInstalledDrivers(    LPCSTR  pszSection,
     char    szObjectName[INI_MAX_OBJECT_NAME+1];
     char    szPropertyName[INI_MAX_PROPERTY_NAME+1];
     char    szValue[INI_MAX_PROPERTY_VALUE+1];
-    char    szIniName[ INI_MAX_OBJECT_NAME + 1 ];
+    char    szIniName[ ODBC_FILENAME_MAX * 2 + 3 ];
     char    *ptr;
-    char    b1[ 256 ], b2[ 256 ];
+    char    b1[ ODBC_FILENAME_MAX + 1 ], b2[ ODBC_FILENAME_MAX + 1 ];
 
     /* SANITY CHECKS */
     if ( pRetBuffer == NULL || nRetBuffer < 2 )
