@@ -30,6 +30,8 @@
     * More ODBC 3.80 additions (streaming parameters)
     * Check for NULL handle in __validate_xxx()
     * Avoid potential memory leak in SQLAllocStatement
+    * Avoid buffer overflow via environment variamles
+    * Fix some typos
 
 8th-October-2013
 2.3.2
